Monitoring and Observability/Monitoring Kubernetes/task/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.kk-demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
